# Valency

./: .gitattributes  .gitignore  DockerFile  README.md  docker-compose.yml
MCPs/mcp-setup/: .chembl_ws_client__0.10.9  .chembl_ws_client__development.sqlite  .gitignore  ADMET_mcp_server.py  MCP_BEST_PRACTICES.md  README.md  alphafold_mcp_server.py  brics_mcp_server.py  chembl_mcp_server.py  chemical_explorer_mcp_server.py  deep_pk_mcp_server.py  demo_wrc.ipynb  env_loader.py  main.py  pubchem_mcp_server.py  pyproject.toml  rcsb_pdb_mcp_server.py  run_all_mcp_servers.py  rxn_mcp_server.py  sample_mcp_sse_client.py  sample_mcp_sse_server.py  similarity_search_mcp_server.py  uniprot_mcp_server.py
MCPs/mcp-setup/utils/: preapare_chromadb_store.py
agents/: .env  README.md  api.py  auth_utils.py  pyproject.toml  run_utils.py  test_mongodb.py  test_run_master.py  test_utils.py
agents/alphafold_agent/: agent.py
agents/brics_agent/: agent.py
agents/chembl_agent/: agent.py
agents/custom_utils/: __init__.py  file_reader.py  mongodb_handler.py  pyproject.toml  tool_output_overflow_callback.py
agents/custom_utils/repo/: __init__.py  admet_instructions.md  alphafold_instructions.md  brics_instructions.md  chembl_instructions.md  declare.py  drug_agent_instructions.md  drug_optimization_instructions.md  master_agent_instructions.md  protein_agent_instructions.md  pubchem_instructions.md  rcsb_instructions.md  sample_instructions.md  similarity_search_instructions.md  uniprot_instructions.md
agents/custom_utils/repo.egg-info/: PKG-INFO  SOURCES.txt
agents/master_agent/: agent.py
agents/nest_loop_agent/: agent.py
agents/protein_agent/: agent.py  protein_agent_instructions.md
agents/pubchem_agent/: agent.py
agents/rcsb_agent/: agent.py
agents/rcsb_pdb_agent/: agent.py
agents/similarity_search_agent/: agent.py
agents/sub_agents/: __init__.py
agents/sub_agents/admet_agent/: agent.py
agents/sub_agents/alphafold_agent/: agent.py
agents/test_agent/: .env  test_mcp_connect.py
agents/uniprot_agent/: agent.py
(+339 files in other folders)
