[project]
name = "mcp-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chembl-webresource-client",
    "chromadb>=1.0.10",
    "fastmcp>=2.5.1",
    "mcp>=1.9.1",
    "pypdb>=2.4",
    "rcsbsearchapi>=2.0.1",
    "rdkit>=2025.3.2",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
]

[tool.uv.workspace]
members = [
    "mcp-setup",
]
